--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
         </ul>
       </div>
       <div class ="social">
-        <div class ="text-primary" link-header>Follow Us</div>
+        <div class ="text-primary link-header">Follow Us</div>
         <ul>
           <li><a class ="twitter"href="#"></a></li>
           <li><a class ="facebook"href="#"></a></li>
-          <li><a class ="intagram"href="#"></a></li>
+          <li><a class ="instagram"href="#"></a></li>
           <li><a class ="pinterest"href="#"></a></li>
         </ul>
         <div class ="newsletter">
-          <div class ="link-header"></div> Email Updates</div>
+          <div class ="link-header"> Email Updates</div>
           <div class ="link-subheader">Exclusive sales, special offers, and more.</div>
           <input class = "form-control" type="text" placeholder="Enter email address" />
           <button class ="btn btn-primary">Sign up</button>
